--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
                 <table id="table">
                     <tbody>
                         <tr>
-                            <td class="labels">Amount </td>
+                            <td class="labels"><td>Amount </td>
                             <td>
                                 <input type="number" id="principal">
                             </td>
                         </tr>
                         <tr>
-                            <td class="labels">Interest Rate </td>
+                            <td class="labels"><td>Interest Rate </td>
                             <td>
                                 <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" name="rate" onchange="SliderValue()"> 
                                 <span id="rate_display">10.25%</span>
