--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<html>
+<!DOCTYPE html>
     <head>
         <title>Simple Interest Calculator</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="maindiv">
-        <h1>Simple Interest Calculator</h1>
-        <div class="contents">
+            <h1>Simple Interest Calculator</h1>
+
+            <div class="contents">
                 <table id="table">
                     <tbody>
                         <tr>
